--- a/react/src/webshop/i18n/translated/pl.json
+++ b/react/src/webshop/i18n/translated/pl.json
@@ -3159,7 +3159,14 @@
         },
         "main_menu": "Menu główne",
         "open_home": "Powrót do strony głównej",
-        "start": "Start"
+        "start": "Start",
+        "start_button": {
+            "berg_en_dal": "Aktywacja kredytu",
+            "geertruidenberg": "Rozpoczęcie aplikacji",
+            "hartvanwestbrabant": "Rozpoczęcie aplikacji",
+            "midden_drenthe": "Aktywacja kredytu",
+            "potjeswijzer": "Rozpoczęcie aplikacji"
+        }
     },
     "voucher_printable": {
         "budget_voucher": {
@@ -3429,9 +3436,9 @@
     "navbar": {
         "vergoedingen": {
             "funds": "Wszystkie opłaty",
-            "funds3": "Uczestniczyć",
-            "funds47": "Korzyści z autobusu",
-            "funds50": "Dodatek do dochodu"
+            "funds_bus": "Korzyści z autobusu",
+            "funds_iit": "Dodatek do dochodu",
+            "funds_meedoen": "Uczestniczyć"
         },
         "goereeoverflakkee": {
             "funds": "Programy"
