move form label required or optional text to translation files

--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -3497,5 +3497,9 @@
     "read_speaker": {
         "read_aloud": "اقرأ لـ",
         "tooltip": "اطلب قراءة النص باستخدام ReadSpeaker webReader"
+    },
+    "form": {
+        "optional": "اختياري",
+        "required": "إلزامي"
     }
 }
