--- a/react/src/webshop/i18n/translated/en-US.json
+++ b/react/src/webshop/i18n/translated/en-US.json
@@ -373,11 +373,8 @@
                 "title": "Me app"
             }
         },
-        "privacy_link": {
-            "text": "I have read the <a tabIndex=\"3\" class=\"text-primary-light sign_up-pane-link\" target=\"_blank\" href=\"{{ link_url }}\">privacy statement</a> "
-        },
         "terms_link": {
-            "text": "I have read the <a tabIndex=\"3\" class=\"text-primary-light sign_up-pane-link\" target=\"_blank\" href=\"{{ link_url }}\">terms and conditions statement</a> "
+            "text": "I agree to the <a tabIndex=\"3\" class=\"text-primary-light sign_up-pane-link\" target=\"_blank\" href=\"{{ link_url }}\">terms and conditions</a>"
         },
         "push": {
             "link_used": {
@@ -393,7 +390,10 @@
             "title": "Restore account"
         },
         "setup_2fa_title": "Setting up two-factor authentication",
-        "sign_in_up_title": "Create an account or start an application?"
+        "sign_in_up_title": "Create an account or start an application?",
+        "privacy_link": {
+            "text": "I have read the <a tabIndex=\"3\" class=\"text-primary-light sign_up-pane-link\" target=\"_blank\" href=\"{{ link_url }}\">privacy statement</a> "
+        }
     },
     "bookmarked_products": {
         "empty": {
