--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -148,9 +148,6 @@
                 "title": "Приложение \"Я"
             }
         },
-        "privacy_link": {
-            "text": "Я прочитал <a tabIndex=\"3\" class=\"text-primary-light sign_up-pane-link\" name=\"privacy\" target=\"_blank\" href=\"{{ link_url }}\">заявление о конфиденциальности</a> "
-        },
         "push": {
             "link_used": {
                 "title": "Эта ссылка уже использовалась или недействительна."
@@ -165,7 +162,13 @@
             "title": "Восстановление учетной записи"
         },
         "setup_2fa_title": "Настройка двухфакторной аутентификации",
-        "sign_in_up_title": "Создать учетную запись или подать заявку?"
+        "sign_in_up_title": "Создать учетную запись или подать заявку?",
+        "privacy_link": {
+            "text": "Я прочитал <a tabIndex=\"3\" class=\"text-primary-light sign_up-pane-link\" target=\"_blank\" href=\"{{ link_url }}\">заявление о конфиденциальности</a> "
+        },
+        "terms_link": {
+            "text": "Я согласен с <a tabIndex=\"3\" class=\"text-primary-light sign_up-pane-link\" target=\"_blank\" href=\"{{ link_url }}\">условиями и положениями</a>"
+        }
     },
     "block_funds": {
         "labels": {
