--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -3291,7 +3291,10 @@
                 "reactivate": "Активируйте"
             },
             "card_number": "Номер пропуска",
-            "title": "Активируйте мой пропуск"
+            "title": "Активируйте мой пропуск",
+            "less_details": "Скрыть все детали",
+            "more_details": "Показать все детали",
+            "personal_date": "Персональные данные"
         },
         "reimbursement": {
             "button": "Отправить купон",
