--- a/react/src/webshop/i18n/translated/tr.json
+++ b/react/src/webshop/i18n/translated/tr.json
@@ -1962,7 +1962,10 @@
                 "reactivate": "Etkinleştir"
             },
             "card_number": "Geçiş numarası",
-            "title": "Geçiş kartımı etkinleştir"
+            "title": "Geçiş kartımı etkinleştir",
+            "less_details": "Tüm detayları gizle",
+            "more_details": "Tüm detayları göster",
+            "personal_date": "Kişisel veriler"
         },
         "reimbursement": {
             "button": "Kupon gönder",
