--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -3291,7 +3291,10 @@
                 "reactivate": "Активувати"
             },
             "card_number": "Номер пропуску",
-            "title": "Активуйте мій пропуск"
+            "title": "Активуйте мій пропуск",
+            "less_details": "Приховати всі деталі",
+            "more_details": "Показати всі деталі",
+            "personal_date": "Персональні дані"
         },
         "reimbursement": {
             "button": "Надіслати купон",
