--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -1962,7 +1962,10 @@
                 "reactivate": "تفعيل"
             },
             "card_number": "رقم المرور",
-            "title": "تفعيل بطاقتي"
+            "title": "تفعيل بطاقتي",
+            "less_details": "إخفاء جميع التفاصيل",
+            "more_details": "إظهار كل التفاصيل",
+            "personal_date": "البيانات الشخصية"
         },
         "reimbursement": {
             "button": "إرسال القسيمة",
