--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -3291,7 +3291,10 @@
                 "reactivate": "Aktivieren Sie"
             },
             "card_number": "Pass-Nummer",
-            "title": "Meinen Pass aktivieren"
+            "title": "Meinen Pass aktivieren",
+            "less_details": "Alle Details ausblenden",
+            "more_details": "Alle Details anzeigen",
+            "personal_date": "Persönliche Daten"
         },
         "reimbursement": {
             "button": "Coupon einreichen",
