--- a/react/src/webshop/i18n/translated/en-US.json
+++ b/react/src/webshop/i18n/translated/en-US.json
@@ -1613,7 +1613,10 @@
             },
             "title": "Activate my pass",
             "alt": "Physical pass: '{[ title ]}'",
-            "card_number": "Pass number"
+            "card_number": "Pass number",
+            "less_details": "Hide all details",
+            "more_details": "Show all details",
+            "personal_date": "Personal data"
         },
         "share_voucher": {
             "buttons": {
