--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -2676,9 +2676,9 @@
         "extra_amount": {
             "date": "Datum",
             "method": "Methode",
-            "mount": "Selbstzahler",
             "refunded": "Erstattet",
-            "status": "Status"
+            "status": "Status",
+            "amount": "Selbstzahler"
         },
         "labels": {
             "cancel": "Abbrechen",
