--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -2676,9 +2676,9 @@
         "extra_amount": {
             "date": "Дата",
             "method": "Метод",
-            "mount": "Самостоятельная оплата",
             "refunded": "Возмещено",
-            "status": "Статус"
+            "status": "Статус",
+            "amount": "Самостоятельная оплата"
         },
         "labels": {
             "cancel": "Отмена",
