--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -2676,9 +2676,9 @@
         "extra_amount": {
             "date": "Дата",
             "method": "Метод",
-            "mount": "Самостійна оплата",
             "refunded": "Відшкодовано",
-            "status": "Статус"
+            "status": "Статус",
+            "amount": "Самостійна оплата"
         },
         "labels": {
             "cancel": "Скасувати",
