--- a/react/src/webshop/i18n/translated/en-US.json
+++ b/react/src/webshop/i18n/translated/en-US.json
@@ -2213,7 +2213,12 @@
             "bsn": "BSN",
             "title": "Personal data"
         },
-        "title": "Data"
+        "title": "Data",
+        "household": {
+            "house_composition": "Family composition",
+            "living_arrangement": "Living Form",
+            "title": "Household"
+        }
     },
     "reimbursements": {
         "breadcrumbs": {
@@ -3340,7 +3345,6 @@
         },
         "description_formal": "You use your <strong>{{fund}}</strong> credit for this reservation.<br/>Are you placing a reservation? Then you agree that we share your personal information with the provider.",
         "description_formal_time": "You can still cancel the reservation within {{ days_to_cancel }} days after confirmation. ",
-        "description_informal": "You use your <strong>{{fund}}</strong> credit for this reservation.<br/>Are you placing a reservation? Then you agree that we share your personal data with the provider.",
         "description_informal_time": "You can still cancel the reservation within {{ days_to_cancel }} days after confirmation.",
         "email_setup_description": "Add your email address to receive messages.",
         "email_setup_title": "Add email address",
@@ -3405,7 +3409,8 @@
             "description": "Your reservation has been made.",
             "title": "It worked!"
         },
-        "voucher_image_alt": "Credit"
+        "voucher_image_alt": "Credit",
+        "description_informal": "You use your <strong>{{fund}}</strong> credit for this reservation.<br/>Are you making a reservation? Then you agree that we share your personal data with the provider."
     },
     "modal_logout": {
         "description_formal": "Are you sure you want to log out?",
