--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -1628,7 +1628,6 @@
         },
         "description_formal": "Вы используете свой <strong>{{fund}}</strong><br/>кредит для этого бронирования. Вы бронируете номер? Тогда вы соглашаетесь с тем, что мы передаем ваши личные данные поставщику услуг.",
         "description_formal_time": "{{ days_to_cancel }} Вы все еще можете отменить бронирование в течение нескольких дней после подтверждения.",
-        "description_informal": "Вы используете свой <strong>{{fund}}</strong><br/>кредит для этого бронирования. Вы бронируете? Тогда вы соглашаетесь с тем, что мы передаем ваши личные данные поставщику услуг.",
         "description_informal_time": "{{ days_to_cancel }} Вы все еще можете отменить бронирование в течение нескольких дней после подтверждения.",
         "email_setup_description": "Добавьте свой адрес электронной почты для получения сообщений.",
         "email_setup_title": "Добавить адрес электронной почты",
@@ -1693,7 +1692,8 @@
             "description": "Ваша бронь сделана.",
             "title": "Это сработало!"
         },
-        "voucher_image_alt": "Кредит"
+        "voucher_image_alt": "Кредит",
+        "description_informal": "Вы используете свой <strong>{{fund}}</strong><br/>кредит для этого бронирования. Вы бронируете? Тогда вы соглашаетесь с тем, что мы передаем ваши личные данные поставщику услуг."
     },
     "modal": {
         "buttons": {
@@ -2372,7 +2372,12 @@
             "bsn": "BSN",
             "title": "Персональные данные"
         },
-        "title": "Данные"
+        "title": "Данные",
+        "household": {
+            "house_composition": "Состав семьи",
+            "living_arrangement": "Живая форма",
+            "title": "Домашнее хозяйство"
+        }
     },
     "provider_sign_up": {
         "breadcrumbs": {
