--- a/react/src/webshop/i18n/translated/tr.json
+++ b/react/src/webshop/i18n/translated/tr.json
@@ -2508,7 +2508,12 @@
             "bsn": "BSN",
             "title": "Kişisel veriler"
         },
-        "title": "Veri"
+        "title": "Veri",
+        "household": {
+            "house_composition": "Aile yapısı",
+            "living_arrangement": "Yaşayan form",
+            "title": "Hane halkı"
+        }
     },
     "reimbursements": {
         "breadcrumbs": {
@@ -3016,7 +3021,6 @@
         },
         "description_formal": "Sen kullanacaksın <strong>{{fund}}</strong><br/>Bu rezervasyon için kredi. Rezervasyon mu yapıyorsunuz? O zaman kişisel verilerinizi sağlayıcı ile paylaşmamızı kabul etmiş olursunuz.",
         "description_formal_time": "{{ days_to_cancel }} Rezervasyonu onaylandıktan sonraki günler içinde de iptal edebilirsiniz.",
-        "description_informal": "Sen kendi <strong>{{fund}}</strong><br/>Bu rezervasyon için kredi. Rezervasyon mu yapıyorsunuz? O zaman kişisel verilerinizi sağlayıcı ile paylaşmamızı kabul etmiş olursunuz.",
         "description_informal_time": "{{ days_to_cancel }} Rezervasyonu onaylandıktan sonraki günler içinde de iptal edebilirsiniz.",
         "email_setup_description": "Mesaj almak için e-posta adresinizi ekleyin.",
         "email_setup_title": "E-posta adresi ekle",
@@ -3081,7 +3085,8 @@
             "description": "Rezervasyonunuz yapılmıştır.",
             "title": "İşe yaradı!"
         },
-        "voucher_image_alt": "Kredi"
+        "voucher_image_alt": "Kredi",
+        "description_informal": "Sen kendi <strong>{{fund}}</strong><br/>Bu rezervasyon için kredi. Rezervasyon mu yapıyorsunuz? O zaman kişisel verilerinizi sağlayıcı ile paylaşmamızı kabul etmiş olursunuz."
     },
     "modal": {
         "buttons": {
