--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -1628,7 +1628,6 @@
         },
         "description_formal": "Ви використаєте свій <strong>{{fund}}</strong><br/>кредит для цього бронювання. Ви робите бронювання? Тоді ви погоджуєтесь, що ми передаємо ваші персональні дані постачальнику.",
         "description_formal_time": "{{ days_to_cancel }} Ви все ще можете скасувати бронювання протягом декількох днів після підтвердження.",
-        "description_informal": "Ви використовуєте свій <strong>{{fund}}</strong><br/>Ви використовуєте свій кредит для цього бронювання. Ви робите бронювання? Тоді ви погоджуєтесь, що ми передаємо ваші персональні дані постачальнику.",
         "description_informal_time": "{{ days_to_cancel }} Ви все ще можете скасувати бронювання протягом декількох днів після підтвердження.",
         "email_setup_description": "Додайте свою електронну адресу, щоб отримувати повідомлення.",
         "email_setup_title": "Додати адресу електронної пошти",
@@ -1693,7 +1692,8 @@
             "description": "Ваше бронювання зроблено.",
             "title": "Спрацювало!"
         },
-        "voucher_image_alt": "Кредит"
+        "voucher_image_alt": "Кредит",
+        "description_informal": "Ви використовуєте свій <strong>{{fund}}</strong><br/>Ви використовуєте свій кредит для цього бронювання. Ви робите бронювання? Тоді ви погоджуєтеся, що ми передаємо ваші персональні дані постачальнику."
     },
     "modal": {
         "buttons": {
@@ -2372,7 +2372,12 @@
             "bsn": "BSN",
             "title": "Персональні дані"
         },
-        "title": "Дані"
+        "title": "Дані",
+        "household": {
+            "house_composition": "Склад сім'ї",
+            "living_arrangement": "Жива форма",
+            "title": "Домогосподарство"
+        }
     },
     "provider_sign_up": {
         "breadcrumbs": {
