--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -1628,7 +1628,6 @@
         },
         "description_formal": "Sie verwenden Ihr <strong>{{fund}}</strong><br/>Guthaben für diese Reservierung verwenden. Buchen Sie eine Reservierung? Dann stimmen Sie zu, dass wir Ihre persönlichen Daten mit dem Anbieter teilen.",
         "description_formal_time": "{{ days_to_cancel }} Sie können die Reservierung noch innerhalb weniger Tage nach der Bestätigung stornieren.",
-        "description_informal": "Sie verwenden Ihr <strong>{{fund}}</strong><br/>Guthaben für diese Reservierung. Nehmen Sie eine Reservierung vor? Dann stimmen Sie zu, dass wir Ihre persönlichen Daten mit dem Anbieter teilen.",
         "description_informal_time": "{{ days_to_cancel }} Sie können die Reservierung noch innerhalb weniger Tage nach der Bestätigung stornieren.",
         "email_setup_description": "Fügen Sie Ihre E-Mail-Adresse hinzu, um Nachrichten zu erhalten.",
         "email_setup_title": "E-Mail Adresse hinzufügen",
@@ -1693,7 +1692,8 @@
             "description": "Ihre Reservierung wurde vorgenommen.",
             "title": "Es hat geklappt!"
         },
-        "voucher_image_alt": "Kredit"
+        "voucher_image_alt": "Kredit",
+        "description_informal": "Sie verwenden Ihr <strong>{{fund}}</strong><br/>Guthaben für diese Reservierung. Sie machen eine Reservierung? Dann sind Sie damit einverstanden, dass wir Ihre persönlichen Daten mit dem Anbieter teilen."
     },
     "modal": {
         "buttons": {
@@ -2372,7 +2372,12 @@
             "bsn": "BSN",
             "title": "Persönliche Daten"
         },
-        "title": "Daten"
+        "title": "Daten",
+        "household": {
+            "house_composition": "Zusammensetzung der Familie",
+            "living_arrangement": "Lebendige Form",
+            "title": "Haushalt"
+        }
     },
     "provider_sign_up": {
         "breadcrumbs": {
