--- a/react/src/webshop/i18n/translated/fr.json
+++ b/react/src/webshop/i18n/translated/fr.json
@@ -1628,7 +1628,6 @@
         },
         "description_formal": "Vous utiliserez votre <strong>{{fund}}</strong><br/>Vous placez une réservation ? Dans ce cas, vous acceptez que nous partagions vos données personnelles avec le fournisseur.",
         "description_formal_time": "{{ days_to_cancel }} Vous pouvez encore annuler la réservation dans les jours qui suivent la confirmation.",
-        "description_informal": "Vous utilisez votre <strong>{{fund}}</strong><br/>Vous placez une réservation ? Dans ce cas, vous acceptez que nous partagions vos données personnelles avec le fournisseur.",
         "description_informal_time": "{{ days_to_cancel }} Vous pouvez encore annuler la réservation dans les jours qui suivent la confirmation.",
         "email_setup_description": "Ajoutez votre adresse e-mail pour recevoir les messages.",
         "email_setup_title": "Ajouter une adresse électronique",
@@ -1693,7 +1692,8 @@
             "description": "Votre réservation a été effectuée.",
             "title": "Cela a fonctionné !"
         },
-        "voucher_image_alt": "Crédit"
+        "voucher_image_alt": "Crédit",
+        "description_informal": "Vous utilisez votre <strong>{{fund}}</strong><br/>Vous effectuez une réservation ? Dans ce cas, vous acceptez que nous partagions vos données personnelles avec le fournisseur."
     },
     "modal": {
         "buttons": {
@@ -2372,7 +2372,12 @@
             "bsn": "BSN",
             "title": "Données personnelles"
         },
-        "title": "Données"
+        "title": "Données",
+        "household": {
+            "house_composition": "Composition de la famille",
+            "living_arrangement": "Forme vivante",
+            "title": "Ménage"
+        }
     },
     "provider_sign_up": {
         "breadcrumbs": {
