--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -3169,6 +3169,9 @@
             "hartvanwestbrabant": "Anwendung starten",
             "midden_drenthe": "Kredit aktivieren",
             "potjeswijzer": "Anwendung starten"
+        },
+        "language": {
+            "prefix": "Ihre Sprache:"
         }
     },
     "voucher_printable": {
