--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -1628,7 +1628,6 @@
         },
         "description_formal": "Вы используете свой <strong>{{fund}}</strong><br/>кредит для этого бронирования. Вы бронируете номер? Тогда вы соглашаетесь с тем, что мы передаем ваши личные данные поставщику услуг.",
         "description_formal_time": "{{ days_to_cancel }} Вы все еще можете отменить бронирование в течение нескольких дней после подтверждения.",
-        "description_informal": "Вы используете свой <strong>{{fund}}</strong><br/>кредит для этого бронирования. Вы бронируете? Тогда вы соглашаетесь с тем, что мы передаем ваши личные данные поставщику услуг.",
         "description_informal_time": "{{ days_to_cancel }} Вы все еще можете отменить бронирование в течение нескольких дней после подтверждения.",
         "email_setup_description": "Добавьте свой адрес электронной почты для получения сообщений.",
         "email_setup_title": "Добавить адрес электронной почты",
@@ -1693,7 +1692,8 @@
             "description": "Ваша бронь сделана.",
             "title": "Это сработало!"
         },
-        "voucher_image_alt": "Кредит"
+        "voucher_image_alt": "Кредит",
+        "description_informal": "Вы используете свой <strong>{{fund}}</strong><br/>кредит для этого бронирования. Вы бронируете? Тогда вы соглашаетесь с тем, что мы передаем ваши личные данные поставщику услуг."
     },
     "modal": {
         "buttons": {
@@ -2341,7 +2341,8 @@
         "account": {
             "active_since": "Активно работает с",
             "last_login": "Последний вход в систему",
-            "title": "Детали счета"
+            "title": "Детали счета",
+            "last_activity": "Последнее действие"
         },
         "bank_accounts": {
             "title": "Банковский счет",
